--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build": "vue-tsc -b && vite build",
     "preview": "vite preview",
     "update": "scripts/mozo_shop_list.sh",
-    "update-and-build": "scripts/mozo_shop_list.sh && vue-tsc -b && vite build"
+    "deploy": "scripts/mozo_shop_list.sh && vue-tsc -b && vite build && cp -r public/* dist"
   },
   "dependencies": {
     "vue": "^3.5.13"
